--- a/css-inter/chal3/ex1/index.html
+++ b/css-inter/chal3/ex1/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mock 1</title>
+    <link rel="stylesheet" type="text/css" href="/chal3/ex1/style.css">
 </head>
 <body>
     <main>
@@ -19,6 +20,9 @@
         <div class="container">
             <div class="lbox"></div>
             <div class="rbox"></div>
+        </div>
+        <div class="container">
+            <footer></footer>
         </div>
     </main>
 </body>
